--- a/_tweets-md/2023/2023-07-01-tweets.md
+++ b/_tweets-md/2023/2023-07-01-tweets.md
@@ -1,6 +1,11 @@
+---    
+date: "2023-06-31"
+time:  23:59:59 +0000
+---
+
 > Interested in a better backup strategy than Ledger, with wallet interoperability &amp; resilience? Or data privacy? @BlockchainComns is holding this month's Gordian Developer meeting at a Europe friendly time: 7pm CET, July 5th. DM me for a link, we'd love to have you attend! [1/4]
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jul 05 00:21:46 +0000 2023](https://twitter.com/ChristopherA/status/1676385848701624321)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 05 00:21:46 +0000 2023](https://twitter.com/ChristopherA/status/1676385848701624321)
 
 ----
 
@@ -8,7 +13,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167638585590
 
 > There will likely also be some discussions of Lifehash, a system to help users recognize seeds, and dCBOR, a deterministic variant of CBOR. Send me a message if you’d like to join us! [4/4]
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jul 05 00:21:48 +0000 2023](https://twitter.com/ChristopherA/status/1676385857555812352)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 05 00:21:48 +0000 2023](https://twitter.com/ChristopherA/status/1676385857555812352)
 
 ----
 
@@ -16,7 +21,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167638585410
 
 > And we’ll be demoing and discussing our Collaborative Seed Recovery (CSR) system, which focuses on not just the resilience of your cryptocurrency seeds, but also your personal choice in its storage. [3/4] [https://github.com/BlockchainCommons/Gordian/tree/master/CSR](https://github.com/BlockchainCommons/Gordian/tree/master/CSR)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jul 05 00:21:48 +0000 2023](https://twitter.com/ChristopherA/status/1676385855903252481)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 05 00:21:48 +0000 2023](https://twitter.com/ChristopherA/status/1676385855903252481)
 
 ----
 
@@ -24,7 +29,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167638584870
 
 > We'll be also be talking about our interoperable Uniform Resources specification for self-describing data, which integrates well with QRs. [2/4] [https://github.com/BlockchainCommons/crypto-commons/blob/master/Docs/ur-1-overview.md](https://github.com/BlockchainCommons/crypto-commons/blob/master/Docs/ur-1-overview.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Jul 05 00:21:48 +0000 2023](https://twitter.com/ChristopherA/status/1676385854108073986)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 05 00:21:48 +0000 2023](https://twitter.com/ChristopherA/status/1676385854108073986)
 
 ----
 
@@ -32,7 +37,7 @@ Replying to [@AaronDewes and @harmoniqpunk](https://twitter.com/AaronDewes/statu
 
 > It's complicated. There has been a number of discussions in the #SiliconSalon community about the openness of silicon design and hardware in general. A good overview from one company perspective was presented last month. [https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation](https://www.siliconsalon.info/salon4/presentations/#cramium-labs-presentation)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 06 06:29:38 +0000 2023](https://twitter.com/ChristopherA/status/1676840814021079040)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 06 06:29:38 +0000 2023](https://twitter.com/ChristopherA/status/1676840814021079040)
 
 ----
 
@@ -40,13 +45,13 @@ Replying to [@AaronDewes and @harmoniqpunk](https://twitter.com/ChristopherA/sta
 
 > I also wrote a more general article on this topic in "Musings of a Trust Architect: Open Silicon" where I talk about some of the benefits and challenges: [https://www.blockchaincommons.com/musings/musings-open-silicon/](https://www.blockchaincommons.com/musings/musings-open-silicon/)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 06 06:31:56 +0000 2023](https://twitter.com/ChristopherA/status/1676841391849377793)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 06 06:31:56 +0000 2023](https://twitter.com/ChristopherA/status/1676841391849377793)
 
 ----
 
 > RT @xuhulk: This @mer__edith interview is a masterclass on how to concisely and effectively educate the public about a sociotechnical issue…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 06 07:40:06 +0000 2023](https://twitter.com/ChristopherA/status/1676858547420950528)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 06 07:40:06 +0000 2023](https://twitter.com/ChristopherA/status/1676858547420950528)
 
 ----
 
@@ -54,13 +59,13 @@ Replying to [@AaronDewes and @harmoniqpunk](https://twitter.com/ChristopherA/sta
 >   
 > 67 preeminent U.K. cryptographers &amp; computer scientists speak out against the perilous magical thinking of th…
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Jul 06 08:00:12 +0000 2023](https://twitter.com/ChristopherA/status/1676863602702299138)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 06 08:00:12 +0000 2023](https://twitter.com/ChristopherA/status/1676863602702299138)
 
 ----
 
 > Let week @BlockchainComns hosted our monthly Gordian Developer Meeting. We were thrilled to hear from several bitcoin developers who are using our Gordian specs for wallet interoperability. [1/7] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 10 21:16:08 +0000 2023](https://twitter.com/ChristopherA/status/1678513460232228865)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 10 21:16:08 +0000 2023](https://twitter.com/ChristopherA/status/1678513460232228865)
 
 ----
 
@@ -68,7 +73,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167851346303
 
 > We also had our first preview of CSR (Collaborative Seed Recovery). @WolfMcNally demonstrated how Gordian Seed Tool 1.6 can store metadata such as descriptors &amp; notes with seeds, thanks to Gordian Envelope! A public beta is available in TestFlight! [4/7] [https://github.com/BlockchainCommons/GordianSeedTool-iOS](https://github.com/BlockchainCommons/GordianSeedTool-iOS)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 10 21:16:09 +0000 2023](https://twitter.com/ChristopherA/status/1678513464254558209)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 10 21:16:09 +0000 2023](https://twitter.com/ChristopherA/status/1678513464254558209)
 
 ----
 
@@ -76,7 +81,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167851346150
 
 > Meanwhile, @craigraw told us about his recent introduction of Lifehash to @SparrowWallet  and offered a great new use case: he added Lifehash so that users knew they were getting the right wallet when they typed in their BIP-38 passphrase! [3/7] [https://sparrowwallet.com/](https://sparrowwallet.com/)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 10 21:16:09 +0000 2023](https://twitter.com/ChristopherA/status/1678513463033987073)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 10 21:16:09 +0000 2023](https://twitter.com/ChristopherA/status/1678513463033987073)
 
 ----
 
@@ -84,7 +89,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167851346023
 
 > We heard from Bitcoin Development Kit’s Thunderbiscuit (@thunderB__) on his introduction to URs and how it’s important to move some of our specs into standards before we end up with competing standards for things like Animated QRs. [2/7] [https://github.com/thunderbiscuit](https://github.com/thunderbiscuit)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 10 21:16:09 +0000 2023](https://twitter.com/ChristopherA/status/1678513461503078401)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 10 21:16:09 +0000 2023](https://twitter.com/ChristopherA/status/1678513461503078401)
 
 ----
 
@@ -92,7 +97,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167851346654
 
 > We’d love to have more wallet developers at August’s meeting, which is scheduled for the 2nd. Sign up for our announcements-list or join us on Signal to stay in the loop. [6/7] [https://www.blockchaincommons.com/subscribe.html](https://www.blockchaincommons.com/subscribe.html)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 10 21:16:10 +0000 2023](https://twitter.com/ChristopherA/status/1678513468951896064)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 10 21:16:10 +0000 2023](https://twitter.com/ChristopherA/status/1678513468951896064)
 
 ----
 
@@ -100,7 +105,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167851346425
 
 > Slides, video, and summary of the meeting are available on our meetings page. [5/7] [https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts](https://github.com/BlockchainCommons/Gordian-Developer-Community/blob/master/meetings/README.md#detailed-list-of-meeting-summaries-with-archives-of-video-mp3-and-transcripts)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 10 21:16:10 +0000 2023](https://twitter.com/ChristopherA/status/1678513466544406536)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 10 21:16:10 +0000 2023](https://twitter.com/ChristopherA/status/1678513466544406536)
 
 ----
 
@@ -108,13 +113,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/167851346895
 
 > Support @Blockchaincomns' work on bitcoin wallet interoperability by becoming a monthly financial sponsor! [7/7] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 10 21:16:11 +0000 2023](https://twitter.com/ChristopherA/status/1678513470722179073)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 10 21:16:11 +0000 2023](https://twitter.com/ChristopherA/status/1678513470722179073)
 
 ----
 
 > Always intrigued by improvements in protocols that leverage Schnorr signatures. This one appears to offer some of the robustness to FROST that ROAST offers, but without its performance issues. [https://twitter.com/bitgould/status/1678409815444389888](https://twitter.com/bitgould/status/1678409815444389888)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 11 07:20:04 +0000 2023](https://twitter.com/ChristopherA/status/1678665442418913284)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 11 07:20:04 +0000 2023](https://twitter.com/ChristopherA/status/1678665442418913284)
 
 ----
 
@@ -122,7 +127,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134220578
 
 > Why is Gordian Envelope important? A new presentation for W3C’s VC-ED group discussed how it can solve problems with digital credentials, such as personal discrimination and institutional liability. [3/9] [https://www.blockchaincommons.com/articles/Dangerous-Educational-Credentials/](https://www.blockchaincommons.com/articles/Dangerous-Educational-Credentials/)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:34 +0000 2023](https://twitter.com/ChristopherA/status/1681342207079616513)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:34 +0000 2023](https://twitter.com/ChristopherA/status/1681342207079616513)
 
 ----
 
@@ -130,13 +135,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134220441
 
 > A lot of the work continues to be on the privacy-preserving Gordian Envelope data format, which was ported to Rust in a set of new libraries this quarter. [2/9] [https://github.com/BlockchainCommons/crypto-commons#gordian-reference-libraries](https://github.com/BlockchainCommons/crypto-commons#gordian-reference-libraries)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:34 +0000 2023](https://twitter.com/ChristopherA/status/1681342205787799552)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:34 +0000 2023](https://twitter.com/ChristopherA/status/1681342205787799552)
 
 ----
 
 > The new quarterly report from @BlockchainComns highlights its Q2 work creating open and interoperable specifications for the blockchain and digital asset communities [1/9] 🧵… [https://twitter.com/BlockchainComns/status/1681340718219169795](https://twitter.com/BlockchainComns/status/1681340718219169795)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:34 +0000 2023](https://twitter.com/ChristopherA/status/1681342204416237569)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:34 +0000 2023](https://twitter.com/ChristopherA/status/1681342204416237569)
 
 ----
 
@@ -144,7 +149,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134221142
 
 > One of the most exciting things happening at @blockchaincomns this year is the advancement of some of specifications in standards groups and other communities. The quarterly talks about everything from the Silicon Salon to dCBOR work at IETF. [7/9] [https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/](https://datatracker.ietf.org/doc/draft-mcnally-deterministic-cbor/)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342212599332864)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342212599332864)
 
 ----
 
@@ -152,7 +157,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134221009
 
 > The Q2 @BlockchainComns report also looked back at some work that continues to be very well-received, including animated QRs, URs, and Self-Sovereign Identity. [6/9] [https://www.blockchaincommons.com/devs/animated-qrs.html](https://www.blockchaincommons.com/devs/animated-qrs.html)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342211429113856)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342211429113856)
 
 ----
 
@@ -160,7 +165,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134220887
 
 > Collaborative Seed Recovery (CSR) also continues to advance. Check out Wolf’s demo from our recent Gordian Developer Meeting. [5/9] [https://www.youtube.com/watch?v=9fyICk0lwL0&t=3216s](https://www.youtube.com/watch?v=9fyICk0lwL0&t=3216s)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342210099523584)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342210099523584)
 
 ----
 
@@ -168,7 +173,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134220707
 
 > Why else is Gordian Envelope important? A new set of use cases on wellness &amp; activity trackers demonstrated how they can protect your data while still supporting your health as well as public health initiatives. [4/9] [https://github.com/BlockchainCommons/Gordian/blob/master/Envelope/Use-Cases/Wellness.md](https://github.com/BlockchainCommons/Gordian/blob/master/Envelope/Use-Cases/Wellness.md)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342208874807296)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:35 +0000 2023](https://twitter.com/ChristopherA/status/1681342208874807296)
 
 ----
 
@@ -176,7 +181,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134221375
 
 > To support our ongoing work creating a secure &amp; compassionate infrastructure for digital assets &amp; identity, please become a Blockchain Commons patron. [9/9] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:36 +0000 2023](https://twitter.com/ChristopherA/status/1681342215296278528)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:36 +0000 2023](https://twitter.com/ChristopherA/status/1681342215296278528)
 
 ----
 
@@ -184,7 +189,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134221259
 
 > As for the future roadmap for @blockchaincomns, how about more Rust work, Gordian Seed Tool 1.6, a developer web site, more legal efforts, IETF in July, and RWOT in September? Read the quarterly report for all the details. [8/9] [https://www.blockchaincommons.com/quarterlies/Q2-2023/](https://www.blockchaincommons.com/quarterlies/Q2-2023/)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 18 16:36:36 +0000 2023](https://twitter.com/ChristopherA/status/1681342213752782848)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 16:36:36 +0000 2023](https://twitter.com/ChristopherA/status/1681342213752782848)
 
 ----
 
@@ -192,25 +197,25 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168134221259
 >   
 > If we actually care about…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 21 04:50:59 +0000 2023](https://twitter.com/ChristopherA/status/1682251803222736897)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 21 04:50:59 +0000 2023](https://twitter.com/ChristopherA/status/1682251803222736897)
 
 ----
 
 > RT @mer__edith: Apple joins Signal &amp; WhatsApp: they'll pull services from the UK before compromising privacy + security. This makes sense:…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Jul 21 05:07:09 +0000 2023](https://twitter.com/ChristopherA/status/1682255872951750657)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 21 05:07:09 +0000 2023](https://twitter.com/ChristopherA/status/1682255872951750657)
 
 ----
 
 > RT @EFF: Earlier this week, the UK’s House of Lords failed to protect the right to end-to-end encryption in the #OnlineSafetyBill. As the b…
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 24 18:04:11 +0000 2023](https://twitter.com/ChristopherA/status/1683538583679029248)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 24 18:04:11 +0000 2023](https://twitter.com/ChristopherA/status/1683538583679029248)
 
 ----
 
 > Important potential threats given these type of devices against #CognitiveLiberty — hopefully Apple will take similar care that they did with eye-tracking in the VisionPro (also see [https://twitter.com/christophera/status/1665849832966168582](https://twitter.com/christophera/status/1665849832966168582) ) [https://twitter.com/thealexker/status/1683263374837121024](https://twitter.com/thealexker/status/1683263374837121024)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 24 20:16:20 +0000 2023](https://twitter.com/ChristopherA/status/1683571837912088578)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 24 20:16:20 +0000 2023](https://twitter.com/ChristopherA/status/1683571837912088578)
 
 ----
 
@@ -218,13 +223,13 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168357183791
 
 > [https://twitter.com/christophera/status/1168260553921433600](https://twitter.com/christophera/status/1168260553921433600)
 
-<img src="../../media/tweet.ico" width="12" /> [Mon Jul 24 20:16:32 +0000 2023](https://twitter.com/ChristopherA/status/1683571889908875265)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 24 20:16:32 +0000 2023](https://twitter.com/ChristopherA/status/1683571889908875265)
 
 ----
 
 > RT @EFF: “Location data is incredibly sensitive. Where we go says a lot about who we are and what’s going on in our lives,” EFF’s @HTsuka t…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 25 04:48:19 +0000 2023](https://twitter.com/ChristopherA/status/1683700683990765568)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 25 04:48:19 +0000 2023](https://twitter.com/ChristopherA/status/1683700683990765568)
 
 ----
 
@@ -234,16 +239,16 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/168357183791
 >   
 > .. on how a highly eff…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Jul 25 16:08:21 +0000 2023](https://twitter.com/ChristopherA/status/1683871819491852288)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 25 16:08:21 +0000 2023](https://twitter.com/ChristopherA/status/1683871819491852288)
 
 ----
 
 > RT @EFF: The U.K. Parliament still needs to hear this message: don’t scan us. [https://www.eff.org/deeplinks/2023/07/uk-government-very-close-eroding-encryption-worldwide](https://www.eff.org/deeplinks/2023/07/uk-government-very-close-eroding-encryption-worldwide)
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Jul 29 16:02:37 +0000 2023](https://twitter.com/ChristopherA/status/1685319928709328901)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 29 16:02:37 +0000 2023](https://twitter.com/ChristopherA/status/1685319928709328901)
 
 ----
 
 > RT @EFF: Protecting user privacy is a vital priority for the fediverse. Unfortunately hosts, users, and developers need to be prepared for…
 
-<img src="../../media/tweet.ico" width="12" /> [Sun Jul 30 04:26:13 +0000 2023](https://twitter.com/ChristopherA/status/1685507060539289601)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 30 04:26:13 +0000 2023](https://twitter.com/ChristopherA/status/1685507060539289601)
