--- a/_tweets-md/2023/2023-09-01-tweets.md
+++ b/_tweets-md/2023/2023-09-01-tweets.md
@@ -1,14 +1,19 @@
+---    
+date: "2023-01-30"
+time:  23:59:59 +0000
+---
+
 Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/1699836667350380879)
 
 > I’ve been talking about self-sovereignty since I introduced self-sovereign identity back in 2016. That was about controlling your digital identity, this is about controlling your digital existence. [2/8] [http://www.lifewithalacrity.com/2016/04/the-path-to-self-soverereign-identity.html](http://www.lifewithalacrity.com/2016/04/the-path-to-self-soverereign-identity.html)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:57 +0000 2023](https://twitter.com/ChristopherA/status/1699836668491231512)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:57 +0000 2023](https://twitter.com/ChristopherA/status/1699836668491231512)
 
 ----
 
 > You deserve to be the captain of your own vessel on the digital seas. That’s the simple premise of my new article on Self-Sovereign Computing. [1/8] [https://www.blockchaincommons.com/articles/self-sovereign-computing/](https://www.blockchaincommons.com/articles/self-sovereign-computing/)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:57 +0000 2023](https://twitter.com/ChristopherA/status/1699836667350380879)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:57 +0000 2023](https://twitter.com/ChristopherA/status/1699836667350380879)
 
 ----
 
@@ -16,7 +21,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983667206
 
 > Self-sovereign identity was a great first step, but we need to be the owners of our whole experience online, especially as it becomes more important to our everyday life. [6/8]
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836673172074772)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836673172074772)
 
 ----
 
@@ -24,7 +29,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983667088
 
 > But you still have responsibilities. In my paradigm of self-sovereign computing, we need to support other community members, either through collective bargaining or sharing resources. It’s the only way we can actually become peers with the corporate behemoths. [5/8]
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836672060584197)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836672060584197)
 
 ----
 
@@ -32,7 +37,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983666970
 
 > The crucial difference is that you’re not a serf to corporate entities, or in this metaphor a passenger on a vessel. Instead you’re captain working and negotiating at parity with others. [4/8]
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836670886178854)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836670886178854)
 
 ----
 
@@ -40,7 +45,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983666849
 
 > But I hope it also clarifies a crucial fact that I think has gotten muddled over the last several: self-sovereignty isn’t about going it alone. It’s about becoming a peer in a community. [3/8]
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836669703450931)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:58 +0000 2023](https://twitter.com/ChristopherA/status/1699836669703450931)
 
 ----
 
@@ -48,7 +53,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983667438
 
 > You can also join me at @BlockchainComns, which is working on the tools that will make self-sovereign computing a reality. [8/8] [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:59 +0000 2023](https://twitter.com/ChristopherA/status/1699836675512537375)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:59 +0000 2023](https://twitter.com/ChristopherA/status/1699836675512537375)
 
 ----
 
@@ -56,26 +61,26 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983667317
 
 > I hope you’ll joing me to advocate for privacy-preserving tools, to demand transparency from platforms, and to assert control over personal data. [7/8]
 
-<img src="../../media/tweet.ico" width="12" /> [Thu Sep 07 17:26:59 +0000 2023](https://twitter.com/ChristopherA/status/1699836674380034130)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 07 17:26:59 +0000 2023](https://twitter.com/ChristopherA/status/1699836674380034130)
 
 ----
 
 > @oliverbeige your url [http://econpatterns.com](http://econpatterns.com) isn’t working. A bad TLS cert maybe?
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 09 17:18:47 +0000 2023](https://twitter.com/ChristopherA/status/1700559386589253899)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 09 17:18:47 +0000 2023](https://twitter.com/ChristopherA/status/1700559386589253899)
 
 ----
 
 > RT @FOUNDATIONdvcs: As always, if a highly motivated and well-resourced adversary gets extended physical access to your device, you should…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 15 05:00:46 +0000 2023](https://twitter.com/ChristopherA/status/1702547987111813618)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 15 05:00:46 +0000 2023](https://twitter.com/ChristopherA/status/1702547987111813618)
 
 ----
 
 > RT @DonjonLedger: Coinkite presented the results on their blog [https://blog.coinkite.com/donjon-faults-2023/](https://blog.coinkite.com/donjon-faults-2023/)  
 > To give a precision, the seed can be practically ext…
 
-<img src="../../media/tweet.ico" width="12" /> [Fri Sep 15 05:01:17 +0000 2023](https://twitter.com/ChristopherA/status/1702548115327537653)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 15 05:01:17 +0000 2023](https://twitter.com/ChristopherA/status/1702548115327537653)
 
 ----
 
@@ -83,27 +88,27 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983667317
 >   
 > Rebooting the Web of Trust 12 has begun in Hürth, Germany (just outside of Köln). We're working on…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 19 18:30:10 +0000 2023](https://twitter.com/ChristopherA/status/1704201228702601650)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 19 18:30:10 +0000 2023](https://twitter.com/ChristopherA/status/1704201228702601650)
 
 ----
 
 > RT @RWOTEvents: We've got seven papers in process for RWOT12. Here's the abstracts that we're working on to continue exploring the frontier…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 19 18:30:12 +0000 2023](https://twitter.com/ChristopherA/status/1704201240211771491)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 19 18:30:12 +0000 2023](https://twitter.com/ChristopherA/status/1704201240211771491)
 
 ----
 
 > RT @RWOTEvents: Here's some of our principles of collaboration in collaborative form! 
 > 
-> ![](../../media/1704201252123595106-F6ZIKKRa0AAJcjV.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/17042012521235951030F6ZIKKRa0AAJcjV.jpg)
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 19 18:30:15 +0000 2023](https://twitter.com/ChristopherA/status/1704201252123595106)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 19 18:30:15 +0000 2023](https://twitter.com/ChristopherA/status/1704201252123595106)
 
 ----
 
 > RT @RWOTEvents: We also immersed ourselves in the space by putting together a timeline of events that have affected the decentralized ident…
 
-<img src="../../media/tweet.ico" width="12" /> [Tue Sep 19 18:30:25 +0000 2023](https://twitter.com/ChristopherA/status/1704201294611894670)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 19 18:30:25 +0000 2023](https://twitter.com/ChristopherA/status/1704201294611894670)
 
 ----
 
@@ -111,19 +116,19 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/169983667317
 >   
 > 1. I was surprised by how little generative AI was…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 20 19:26:36 +0000 2023](https://twitter.com/ChristopherA/status/1704577818213106128)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 20 19:26:36 +0000 2023](https://twitter.com/ChristopherA/status/1704577818213106128)
 
 ----
 
 > RT @RWOTEvents: Here's the final of the timeline we collaboratively created at #RWOT12 showing influential events for decentralized identit…
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 20 19:28:01 +0000 2023](https://twitter.com/ChristopherA/status/1704578177849508138)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 20 19:28:01 +0000 2023](https://twitter.com/ChristopherA/status/1704578177849508138)
 
 ----
 
 > The Principle of Least Privilege (or Least Authority) is a cornerstone principle for computer security. But how does it apply to data? That’s what my newest Musings of Trust Architect discusses. 🧵[1/9]. [https://www.blockchaincommons.com/musings/Least-Necessary/](https://www.blockchaincommons.com/musings/Least-Necessary/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:18 +0000 2023](https://twitter.com/ChristopherA/status/1707104143301902602)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:18 +0000 2023](https://twitter.com/ChristopherA/status/1707104143301902602)
 
 ----
 
@@ -131,7 +136,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710414580
 
 > I consider this a design pattern like those famously created by Christopher Alexander for architecture. They’re building blocks that can be used to create secure, trusted computing (and now data) systems [4/9]. [https://www.designsystems.com/christopher-alexander-the-father-of-pattern-language/](https://www.designsystems.com/christopher-alexander-the-father-of-pattern-language/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:19 +0000 2023](https://twitter.com/ChristopherA/status/1707104147110257017)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:19 +0000 2023](https://twitter.com/ChristopherA/status/1707104147110257017)
 
 ----
 
@@ -139,7 +144,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710414463
 
 > I extend that to data such as SSI and VCs with the Principle of Least Access: “In order to protect privacy, respect individual entitlements, and maintain human dignity, only the minimum amount of data access necessary to achieve a specific goal should be granted.” [3/9]
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:19 +0000 2023](https://twitter.com/ChristopherA/status/1707104145801711818)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:19 +0000 2023](https://twitter.com/ChristopherA/status/1707104145801711818)
 
 ----
 
@@ -147,7 +152,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710414330
 
 > The Principle of Least Privilege says: give someone the least permissions they need to do their job. @marksammiller extended that to include transitive permissions, creating the Principle of Least Authority [2/9].
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:19 +0000 2023](https://twitter.com/ChristopherA/status/1707104144639791603)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:19 +0000 2023](https://twitter.com/ChristopherA/status/1707104144639791603)
 
 ----
 
@@ -155,7 +160,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710415077
 
 > If you’re interested in individual consulting on these trust architecture, DIDs/VCs, human rights digital privacy, and related topics, drop me a personal line [8/9].
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104151971537000)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104151971537000)
 
 ----
 
@@ -163,7 +168,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710414956
 
 > I’d love to hear your thoughts on this and other design patterns for secure computing and secure usage of data such as that found in self-sovereign identities and verifiable credentials [7/9].
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104150771917178)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104150771917178)
 
 ----
 
@@ -171,7 +176,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710414842
 
 > What can you do to ensure that each person has what they need to do their job, and is it a better pattern than the converse? Take a look at the article for the whole discussion [6/9]. [https://www.blockchaincommons.com/musings/Least-Necessary/](https://www.blockchaincommons.com/musings/Least-Necessary/)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104149563900303)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104149563900303)
 
 ----
 
@@ -179,7 +184,7 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710414711
 
 > When contemplating design patterns, I find it useful to twist them on their head, so the article also talks about the flipside: Principles of Necessary Privilege, Authority, and Access [5/9].
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104148427321654)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:20 +0000 2023](https://twitter.com/ChristopherA/status/1707104148427321654)
 
 ----
 
@@ -187,16 +192,16 @@ Replying to [@ChristopherA](https://twitter.com/ChristopherA/status/170710415197
 
 > If you’re interested in supporting the continued development of trust architectures, become a patron for Blockchain Commons [9/9]. [https://github.com/sponsors/BlockchainCommons](https://github.com/sponsors/BlockchainCommons)
 
-<img src="../../media/tweet.ico" width="12" /> [Wed Sep 27 18:45:21 +0000 2023](https://twitter.com/ChristopherA/status/1707104153124880817)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 27 18:45:21 +0000 2023](https://twitter.com/ChristopherA/status/1707104153124880817)
 
 ----
 
 > RT @matthew_d_green: If anyone thought that the EU legislation on content scanning would be limited, you can forget about that. Europol has…
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 30 02:22:47 +0000 2023](https://twitter.com/ChristopherA/status/1707944047304978866)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 30 02:22:47 +0000 2023](https://twitter.com/ChristopherA/status/1707944047304978866)
 
 ----
 
 > RT @mer__edith: 🙏thank you @giacomo_zando @Balkanizator &amp; @LudekStavinoha for revealing the EU law enforcement &amp; AI company mass surveillan…
 
-<img src="../../media/tweet.ico" width="12" /> [Sat Sep 30 02:23:06 +0000 2023](https://twitter.com/ChristopherA/status/1707944125126099072)
+<img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 30 02:23:06 +0000 2023](https://twitter.com/ChristopherA/status/1707944125126099072)
